# managarm

./: meson.build
drivers/block/ata/src/: main.cpp
drivers/tpm/: meson.build  tpm.yml
drivers/tpm/src/: command.hpp  controller.cpp  controller.hpp  main.cpp  spec.hpp
kernel/thor/: meson.build
kernel/thor/arch/x86/: meson.build
kernel/thor/system/legacy-pc/: ata.cpp
kernel/thor/system/tpm/: tpm.cpp
posix/init/src/: stage2.cpp
posix/subsystem/src/: file.hpp
